@@ -2,6 +2,7 @@ cm4all-beng-proxy (0.5.14) unstable; urgency=low
 
   * ajp-client: implemented request body
   * cookie-client: obey "max-age=0" properly
+  * processor: forward the original HTTP status
   * debian: added a separate -optimized-dbg package
 
  --
